--- a/ball.css
+++ b/ball.css
@@ -1,10 +1,15 @@
 .ball {
-    width: 50px;
-    height: 50px;
-    background-color: red;
+    width: 80px;
+    height: 80px;
+    background-color: rgb(255, 72, 0);
     border-radius: 50%;
     position: absolute;
-    animation: bounce 2s infinite ease-in-out;
+    animation: bounce 4s infinite ;
+}
+
+body{
+    background-image: url(basketball-court-side-view-cartoon-design_251819-2698.png);
+    background-size: cover;
 }
 
 @keyframes bounce {
@@ -14,7 +19,7 @@
     }
     25% {
         left: 25%;
-        bottom: 100px;
+        bottom: 30%;
     }
     50% {
         left: 50%;
@@ -22,10 +27,10 @@
     }
     75% {
         left: 75%;
-        bottom: 100px;
+        bottom: 20%;
     }
     100% {
-        left: 100%;
+        left: 95%;
         bottom:0;
     }
 }
@@ -40,4 +45,13 @@
     color: red;
     text-decoration: none;
     font-size: 40px;
+}
+
+.link{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%; 
+    height: 100%;
+    display: block;
 }
