--- a/blog4.css
+++ b/blog4.css
@@ -3,6 +3,45 @@ body{
     padding-left: 5%;
 }
 
+.container {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px; /* Espacio entre los divs */
+    padding: 20px;
+    
+  }
+
+
+  .box {
+    background-color: #ddd;
+    padding: 20px;
+    text-align: center;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    flex: 1 1 30%; /* Tres columnas en pantallas grandes */
+    min-width: 200px; /* Ancho mínimo para cada div */
+    transition: transform 0.3s ease;
+  }
+
+  .box:hover{
+    transform: translateY(-2px) scale(1.02);
+}
+  
+  /* Ajuste para pantallas medianas */
+  @media (max-width: 768px) {
+    .box {
+      flex: 1 1 45%; /* Dos columnas en pantallas medianas */
+    }
+  }
+  
+  /* Ajuste para pantallas pequeñas */
+  @media (max-width: 480px) {
+    .box {
+      flex: 1 1 100%; /* Una columna en pantallas pequeñas */
+    }
+  }
+  
+
 .titulo{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     color: black;
@@ -13,21 +52,14 @@ body{
     width: 400px;
     height: 400px; 
     object-fit: cover; 
-    transition: transform 0.3s ease;
 }
 
-.foto:hover{
-    transform: translateY(-2px) scale(1.04);
-}
-td {
-    vertical-align: top; 
-    min-height: 200px; 
-}
+
 
 .texto {
+    padding-left: 12%;
     width: 400px; 
-    word-wrap: break-word; 
-    padding-right: 10px;
+    word-wrap: break-word;
     font-family: 'Courier New', Courier, monospace;
     font-weight: bolder;
     text-decoration: none;
