--- a/identikit.css
+++ b/identikit.css
@@ -1,5 +1,5 @@
 body {
-    background-color:rgb(100, 10, 4);
+    background-color: c1121f; 
 }
 
 .logo {
@@ -18,7 +18,7 @@ body {
 }
 
 .info-section {
-    background-color: rgb(12, 17, 92);
+    background-color: 003049;
     border-top-right-radius: 20px;
     border-bottom-right-radius: 20px;
     color: white;
