--- a/identikit.css
+++ b/identikit.css
@@ -41,7 +41,7 @@ body {
 }
 
 .favorites-header {
-    border-bottom: 3px solid rgb(255, 255, 255);
+    border-bottom: 3px solid 780000;
     color: white;
     text-align: center;
 }
