--- a/blog4.css
+++ b/blog4.css
@@ -1,25 +1,25 @@
 body{
-    background-color: rgb(231, 204, 170);
+    background-color: rgb(212, 19, 19);
     padding-left: 5%;
 }
 
 .container {
     display: flex;
     flex-wrap: wrap;
-    gap: 10px; /* Espacio entre los divs */
-    padding: 20px;
-    
+    gap: 10px; 
+    padding-top: 20px;
+  
   }
 
 
   .box {
-    background-color: #ddd;
+    background-color: #b65353;
     padding: 20px;
     text-align: center;
-    border: 1px solid #ccc;
+    border: 1px solid #b18c8c;
     border-radius: 5px;
-    flex: 1 1 30%; /* Tres columnas en pantallas grandes */
-    min-width: 200px; /* Ancho mínimo para cada div */
+    flex: 1 1 30%; 
+    min-width: 200px; 
     transition: transform 0.3s ease;
   }
 
@@ -27,34 +27,33 @@ body{
     transform: translateY(-2px) scale(1.02);
 }
   
-  /* Ajuste para pantallas medianas */
+  
   @media (max-width: 768px) {
     .box {
-      flex: 1 1 45%; /* Dos columnas en pantallas medianas */
+      flex: 1 1 45%; 
     }
   }
   
-  /* Ajuste para pantallas pequeñas */
+  
   @media (max-width: 480px) {
     .box {
-      flex: 1 1 100%; /* Una columna en pantallas pequeñas */
+      flex: 1 1 100%;
     }
   }
   
 
 .titulo{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-weight: lighter;
     color: black;
     letter-spacing: 2px;
 }
 
 .foto{
-    width: 400px;
-    height: 400px; 
+    width: 100%;
+    height: 300px; 
     object-fit: cover; 
 }
-
-
 
 .texto {
     padding-left: 12%;
@@ -99,5 +98,5 @@ body{
     font-family: 'Courier New', Courier, monospace;
     color: black;
     text-decoration: none;
-    padding-right:7% ;
+    padding-right: 1%;
 }
