--- a/blog4.css
+++ b/blog4.css
@@ -53,16 +53,30 @@ body {
 .navbar {
     display: flex;
     justify-content: space-between;
-    align-items: center; 
+    align-items: center;
     padding: 10px;
     background-color: #333;
     color: white;
 }
 
-.izquierda, .centro, .derecha {
+.navbar a {
+    flex: 1;
+    text-align: center;
     font-family: 'Courier New', Courier, monospace;
     color: white;
     text-decoration: none;
+}
+
+.izquierda {
+    text-align: left;
+}
+
+.centro {
+    text-align: center;
+}
+
+.derecha {
+    text-align: right;
 }
 
 .footer {
@@ -72,4 +86,5 @@ body {
     color: white;
     font-family: 'Courier New', Courier, monospace;
 }
+
 
