--- a/taylorswift.css
+++ b/taylorswift.css
@@ -41,3 +41,18 @@ body {
     width: 60%;
     font-family: 'Lucida Sans', Geneva, Verdana, sans-serif;
 }
+
+@media (max-width: 768px) {
+    .contenedor {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+    .tabla {
+        flex-direction: column;
+    }
+    .izquierda, .derecha {
+        width: 100%;
+        text-align: center;
+    }
+}
